[gd_scene load_steps=8 format=1]

[ext_resource path="res://torch.gd" type="Script" id=1]
[ext_resource path="res://anims/torch/torch_1.png" type="Texture" id=2]
[ext_resource path="res://anims/torch/torch_2.png" type="Texture" id=3]
[ext_resource path="res://anims/torch/torch_3.png" type="Texture" id=4]
[ext_resource path="res://anims/torch/torch_off.png" type="Texture" id=5]
[ext_resource path="res://spot.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ { "frames":[ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ], "loop":true, "name":"burn", "speed":5.0 } ]

[node name="torch" type="Node2D" groups=[ "torch" ]]

script/script = ExtResource( 1 )

[node name="AnimSprite" type="AnimatedSprite" parent="."]

frames = SubResource( 1 )
animation = "burn"
frame = 2
playing = true

[node name="StaticSprite" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="."]

enabled = true
editor_only = false
texture = ExtResource( 6 )
offset = Vector2( 0, 0 )
scale = 0.7
color = Color( 0.851563, 0.60915, 0.146362, 1 )
energy = 1.0
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = true
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.298568
one_shot = false
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


